# Weather-App

./: README  README.md  manage.py  pyproject.toml
pages/: urls.py  views.py
pages/static/static_dirs/: base.css  home.css  weather.css
pages/templates/: base.html  home.html  weather.html
weatherApp/: README
weatherApp/weatherApp/: settings.py
weatherApp_project/: asgi.py  settings.py  urls.py  wsgi.py
