[tool.poetry]
name = "weather app"
version = "0.0.1"
description = "Weather Application"
authors = ["Ethan Lourens"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
Django = "^4.2.4"

[tool.poetry.group.dev.dependencies]
Django = "^4.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
